odh-manifests/smaug/superset/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset
  labels:
    app: superset
spec:
  replicas: 1
  selector:
    matchLabels:
    deployment: superset
  template:
    metadata:
      labels:
        app: superset
        deployment: superset
    spec:
      containers:
      - name: superset
        image: $(SUPERSET_IMAGE)
        imagePullPolicy: Always
        ports:
          - containerPort: 8088
            protocol: TCP
        volumeMounts:
          - mountPath: /etc/superset
            name: superset-config
        resources:
          requests:
            cpu: $(SUPERSET_CPU_REQUESTS)
            memory: $(SUPERSET_MEMORY_REQUESTS)
          limits:
            cpu: $(SUPERSET_CPU_LIMITS)
            memory: $(SUPERSET_MEMORY_LIMITS)
      volumes:
        - name: superset-config
          secret:
            secretName: superset-config
            defaultMode: 420
            items:
              - key: superset_config.py
                path: superset_config.py
              - key: custom_sso_security_manager.py
                path: custom_sso_security_manager.py
